VISTA: Legend alignment fixes

--- a/mavista/assets/css/main.css
+++ b/mavista/assets/css/main.css
@@ -375,38 +375,38 @@ svg {
   stroke-width: 1px;
 }
 
-/* Stacked column styling */
+/* Likert styling */
 
-.stacked_col {
+.likert {
   font: 11pt Tahoma, sans-serif;
 }
 
-.stacked_col .yAxis,
-.stacked_col .xAxis {
+.likert .yAxis,
+.likert .xAxis {
     font: 11pt Tahoma, sans-serif;
 }
 
-.stacked_col .yAxis .tick line,
-.stacked_col .xAxis .tick line {
+.likert .yAxis .tick line,
+.likert .xAxis .tick line {
   display: none;
 }
 
-.stacked_col .yAxis path,
-.stacked_col .xAxis path {
+.likert .yAxis path,
+.likert .xAxis path {
   stroke: #ccc;
 }
 
-.stacked_col .col {
+.likert .bar {
   stroke: #fff;
-  stroke-width: 2px;
+  stroke-width: 1px;
   shape-rendering: crispEdges;
 }
 
-.stacked_col .bar_label {
+.likert .bar_label {
   fill: #0d1969;
 }
 
-.stacked_col .label_rect {
+.likert .label_rect {
   fill: #fff;
   stroke: #0d1969;
   stroke-width: 1px;
